fix navbar header content splitting into two lines when the menu is toggled on smaller devices.

--- a/components/Navbar/Navbar.css
+++ b/components/Navbar/Navbar.css
@@ -71,7 +71,7 @@
 @media (max-width: 800px) {
   .navbar.menu-open {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, max-content);
     grid-template-rows: repeat(2, 1fr);
   }
 
